--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ server: true
 markdown: kramdown
 name: "MateriaslManual"
 url: "https://MaterialManual.github.io"
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
